--- a/stories/index.html
+++ b/stories/index.html
@@ -260,7 +260,7 @@
     </tr>
     <tr>
       <td>0296</td>
-      <td><a href="/stories/ar/0296_tom-the-banana-seller_slides.html" target="_blank">توم، بائع الموز</a></td>
+      <td><a href="/stories/ar/0296_توم، بائع الموز_slides.html" target="_blank">توم، بائع الموز</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsUTkwTGRHUVRXb3M"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ar0296"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -275,6 +275,12 @@
       <td><a href="/stories/ar/0324_يوم-تركت-المنزل-ذاهباً-إلي-المدينة-_slides.html" target="_blank">يوم تركت المنزل ذاهباً إلي المدينة</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsUTkwTGRHUVRXb3M"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ar0324"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0327</td>
+      <td><a href="/stories/ar/0327_لنعد الحيوانات_slides.html" target="_blank">لنعد الحيوانات</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsUTkwTGRHUVRXb3M"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ar0327"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0337</td>
@@ -3683,7 +3689,7 @@
       <td>0327</td>
       <td><a href="http://my.africanstorybook.org/stories/counting-animals">Counting animals</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#aeb0327">aeb</a>, <a href="#es0327">es</a>, <a href="#no0327">no</a>, <a href="#tl0327">tl</a></td>
+      <td><a href="#aeb0327">aeb</a>, <a href="#ar0327">ar</a>, <a href="#es0327">es</a>, <a href="#no0327">no</a>, <a href="#tl0327">tl</a></td>
     </tr>
     <tr>
       <td>0331</td>
